# EdgeDetection

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/edgedetector/: Camera2Helper.java  GLRenderer.java  GLSurfaceViewWrapper.java  MainActivity.java  NativeBridge.java
web/: app.js  index.html  tsconfig.json
web/ts/: app.ts
